@@ -10,7 +10,7 @@ exec wish "$0" "$@"
 # separate ".tcl" files is this directory, which are sourced by this script as
 # needed.
 #
-# RCS: @(#) $Id: widget,v 1.44 2007/11/01 11:34:00 das Exp $
+# RCS: @(#) $Id: widget,v 1.45 2007/11/02 23:48:11 dkf Exp $
 
 package require Tcl	8.5
 package require Tk	8.5
@@ -328,6 +328,8 @@ addFormattedText {
     @@demo states	The 50 states
     @@demo colors	Colors: change the color scheme for the application
     @@demo sayings	A collection of famous and infamous sayings
+    @@new
+    @@demo mclist	A multi-column list of countries
     @@new
     @@demo tree		A directory browser tree
 
